--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ encoding: utf-8
 # seo
 title: TMaize'Blog
 description: TMaize'Blog
-keywords: TMaize,Blog,TMaize'Blog
+keywords: TMaize,Blog,Java,Android,Html,Css,Js,算法
 author: TMaize
 
 # "","/blog"
