--- a/_请删除这个文件夹/theme-tmaize-blog/config.json
+++ b/_请删除这个文件夹/theme-tmaize-blog/config.json
@@ -1,7 +1,7 @@
 {
   "context": "",
   "author": "TMaize",
-  "siteName": "TMaize'Blog",
+  "siteName": "TMaize Blog",
   "copyright": "2016",
   "record": "皖ICP备16016174号",
   "keywords": "TMaize,Blog,Java,Android,Html,Css,Js,算法",
