--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 encoding: utf-8
 
 # seo
-title: TMaize'Blog
-description: TMaize'Blog
+title: TMaize Blog
+description: TMaize Blog
 keywords: TMaize,Blog,Java,Android,Html,Css,Js,算法
 author: TMaize
 
