--- a/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/config.json
+++ b/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/config.json
@@ -2,7 +2,7 @@
   "context": "",
   "author": "TMaize",
   "siteName": "TMaize Blog",
-  "copyright": "2016",
+  "copyright": "2016 |",
   "record": "皖ICP备16016174号",
   "keywords": "TMaize,Blog,Java,Android,Html,Css,Js,算法",
   "siteMapPrefix": "http://blog.tmaize.net",
