--- a/__小程序/miniprogram/app.json
+++ b/__小程序/miniprogram/app.json
@@ -9,5 +9,11 @@
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#FFFFFF",
         "navigationBarTextStyle": "black"
+    },
+    "plugins": {
+        "htmltowxml": {
+            "version": "1.3.0",
+            "provider": "wxa51b9c855ae38f3c"
+        }
     }
 }
