更新忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /__site-generator版本-使用jekyll请删除/app
 /__site-generator版本-使用jekyll请删除/config.xml
+/__site-generator版本-使用jekyll请删除/*.zip
 /草稿
 /__小程序/project.config.json
 node_modules
