--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ encoding: utf-8
 # SEO相关信息
 title: zhangchang的Blog
 description: zhangchang的Blog
-keywords: Java, 数据结构, 算法, 多线程, 设计模式, spring
+keywords: Java, 数据结构, 算法, 多线程, 设计模式, spring, Http
 author: zhangchang
 
 # 项目环境
