再次尝试加Gitalk

--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,9 @@ record: "京A00001号"
 
 coderay:
   coderay_tab_width: 4
+
+# Gitalk settings
+comment_gitalk_clientId: cd9e988dce5113b6026b
+comment_gitalk_clientSecret: f90642dc6b14c8236e0058744a18759c739f0a6e
+comment_gitalk_repo: https://github.com/changboa66/github-pages-comments
+github_username: changboa_66
