--- a/_config.yml
+++ b/_config.yml
@@ -27,5 +27,5 @@ coderay:
 # Gitalk settings
 comment_gitalk_clientId: cd9e988dce5113b6026b
 comment_gitalk_clientSecret: f90642dc6b14c8236e0058744a18759c739f0a6e
-comment_gitalk_repo: https://github.com/changboa66/github-pages-comments
+comment_gitalk_repo: changboa66.github.io
 github_username: changboa_66
