--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,1 @@
-/__site-generator版本-使用jekyll请删除/app
-/__site-generator版本-使用jekyll请删除/config.xml
-/__site-generator版本-使用jekyll请删除/*.zip
-/草稿
-/__小程序/project.config.json
-node_modules
+/tool/temp
