--- a/_config.yml
+++ b/_config.yml
@@ -2,24 +2,17 @@ encoding: utf-8
 
 # SEO相关信息
 title: TMaize Blog
-description: TMaize Blog
-keywords: TMaize,Blog,Java,Android,Html,Css,Js,算法
+description: TMaize的个人博客
+keywords: TMaize,Blog,Java,Html,JavaScript
 author: TMaize
+footerText: 'Copyright © 2016 皖ICP备16016174号'
 
-# 项目环境
-# 静态资源找不到，链接点进去不对时请检查下这里的配置
-# demo.com访问设置为""，demo.com/blog/访问设置为"/blog"
-context: ""
+# 基础路径
+baseUrl: ''
 
 # 用来生成sitemap
-siteMapPrefix: "http://blog.tmaize.net"
+# sitemapPrefix + baseUrl + post.url
+sitemapPrefix: 'http://blog.tmaize.net'
 
 ## 文章url前缀，固定格式，不要动
 permalink: /posts/:year/:month/:day/:title.html
-
-# 页面底部信息
-copyright: 2016
-record: "皖ICP备16016174号"
-
-coderay:
-  coderay_tab_width: 4
