--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,5 @@ permalink: /posts/:year/:month/:day/:title.html
 kramdown:
   auto_ids: true
   input: GFM
+
+exclude: ["CNAME", "README.md", "build-tool"]
