--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,17 @@ keywords: TMaize,Blog,Java,Html,JavaScript
 author: TMaize
 footerText: 'Copyright © 2016 皖ICP备16016174号'
 
-# 留言配置, 建议自己申请一个，表结构见README文件
-# 不需要的话值设置为空，同时删除 # 菜单 配置项中的留言页面
+# 留言配置, 不需要的话值设置为空，同时删除 # 菜单 配置项中的留言页面
 # 官网 https://www.bmob.cn
 # 文档 https://bmob.github.io/hydrogen-js-sdk
+# 建议自己申请一个，表结构如下
+# 表名 Comment ,字段如下 
+# url      String
+# time     Date
+# nickName String
+# email    String
+# content  String
+# website  String
 bmobApplicationId: 34f0386ac5bd50fd77fe82190af00faf
 bmobRestApiKey: 6f1419c800083315432f2df7dcb503d4
 
