--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,13 @@ keywords: TMaize,Blog,Java,Html,JavaScript
 author: TMaize
 footerText: 'Copyright © 2016 皖ICP备16016174号'
 
+# 这些不要动
+permalink: /posts/:year/:month/:day/:title.html
+kramdown:
+  auto_ids: true
+  input: GFM
+exclude: ['CNAME', 'README.md', 'build-tool']
+
 # 域名配置
 # baseUrl配置,如果网站部署在根目录下的目录中，请设置为 /目录名
 domainUrl: 'http://blog.tmaize.net'
@@ -17,20 +24,28 @@ tucaoUrl: https://support.qq.com/product/86335
 
 # 菜单
 menu:
-  - title: Home
+  - title: 首页
     url: /
-  - title: Categories
+  - title: 归类
     url: /pages/categories.html
-  - title: Search
+  - title: 搜索
     url: /pages/search.html
-  - title: Links
+  - title: 友链
     url: /pages/links.html
-  - title: Chat
+  - title: 留言
     url: /pages/chat.html
-  - title: About
+  - title: 关于
     url: /pages/about.html
 
-# 自定义插件,具体说明请看README文档
+# 自定义插件
+# plugin-mta-stats
+# 腾讯移动分析(https://mta.qq.com)，如果需要请申请自己的，不需要的话 use 请设置为 false
+# plugin-baidu-push
+# 百度收录自动推送，不需要的话 use 请设置为 false
+# plugin-click-effect
+# 页面点击，出现核心主义价值观
+# plugin-mathjax
+# 数学公式支持，比较影响加载速度，请设置为 false
 customPlugins:
   - use: true
     file: 'plugin-mta-stats.html'
@@ -43,9 +58,19 @@ customPlugins:
   - use: false
     file: 'plugin-mathjax.html'
 
-# 这些不要动
-permalink: /posts/:year/:month/:day/:title.html
-kramdown:
-  auto_ids: true
-  input: GFM
-exclude: ['CNAME', 'README.md', 'build-tool']
+# 友情链接
+links:
+  - title: TMaize的个人博客
+    url: http://blog.tmaize.net
+  - title: 文科中的技术宅
+    url: https://www.townwang.com
+  - title: Auuu Nya Blog
+    url: http://mu1er.cn
+  - title: 春风十里
+    url: https://www.geek-era.com
+  - title: 阿川的个人博客
+    url: https://achuan.io
+  - title: 魏文成博客
+    url: https://www.wwc.ren
+  - title: 06m
+    url: https://www.06m.me
