--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,10 @@ menu:
   - title: 关于
     url: /pages/about.html
 
+# Google AdSense
+# 没有置空
+adsense: 'ca-pub-1121695299360400'
+
 # 自定义插件
 # plugin-mta-stats
 # 腾讯移动分析(https://mta.qq.com)，如果需要请申请自己的，不需要的话 use 请设置为 false
