--- a/_config.yml
+++ b/_config.yml
@@ -78,3 +78,5 @@ links:
     url: https://www.wwc.ren
   - title: 06m
     url: https://www.06m.me
+  - title: 达达知识
+    url: https://www.dadapush.com/
