--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,5 @@ links:
     url: https://www.06m.me
   - title: 达达知识
     url: https://www.dadapush.com/
+  - title: 祈雨的博客
+    url: https://wakzz.cn/
