update post && add friend

--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,5 @@ links:
     url: https://www.dadapush.com/
   - title: 祈雨的博客
     url: https://wakzz.cn/
+  - title: hongCYu’s Blog
+    url: https://hongcyu.cn/
