--- a/_config.yml
+++ b/_config.yml
@@ -74,3 +74,5 @@ links:
     url: https://wakzz.cn/
   - title: hongCYu’s Blog
     url: https://hongcyu.cn/
+  - title: Sorryfu - 分享技术，记录生活
+    url: https://sorryfu.top/
