--- a/_config.yml
+++ b/_config.yml
@@ -76,3 +76,5 @@ links:
     url: https://hongcyu.cn/
   - title: Sorryfu - 分享技术，记录生活
     url: https://sorryfu.top/
+  - title: 简单的人生笔记
+    url: https://yoyling.com/
