--- a/_config.yml
+++ b/_config.yml
@@ -78,3 +78,5 @@ links:
     url: https://sorryfu.top/
   - title: 简单的人生笔记
     url: https://yoyling.com/
+  - title: oneNeko的博客
+    url: https://blog.oneneko.com/
