--- a/_config.yml
+++ b/_config.yml
@@ -80,3 +80,5 @@ links:
     url: https://yoyling.com/
   - title: oneNeko的博客
     url: https://blog.oneneko.com/
+  - title: Py的Blogggg
+    url: https://lzhbhlrpython.github.io/
