--- a/_config.yml
+++ b/_config.yml
@@ -70,16 +70,16 @@ links:
   - title: 06m
     url: https://www.06m.me
   - title: 达达知识
-    url: https://www.dadapush.com/
+    url: https://www.dadapush.com
   - title: 祈雨的博客
-    url: https://wakzz.cn/
+    url: https://wakzz.cn
   - title: hongCYu’s Blog
-    url: https://hongcyu.cn/
+    url: https://hongcyu.cn
   - title: Sorryfu - 分享技术，记录生活
-    url: https://sorryfu.top/
+    url: https://sorryfu.top
   - title: 简单的人生笔记
-    url: https://yoyling.com/
+    url: https://yoyling.com
   - title: oneNeko的博客
-    url: https://blog.oneneko.com/
+    url: https://blog.oneneko.com
   - title: Py的Blogggg
-    url: https://lzhbhlrpython.github.io/
+    url: https://blog.pyliubaolin.top
