--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,8 @@ links:
     url: https://wakzz.cn
   - title: hongCYu’s Blog
     url: https://hongcyu.cn
-  - title: Sorryfu - 分享技术，记录生活
-    url: https://sorryfu.top
+  - title: 任我行
+    url: https://fushaolei.github.io/
   - title: 简单的人生笔记
     url: https://yoyling.com
   - title: oneNeko的博客
