--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ links:
     url: https://wakzz.cn
   - title: hongCYu’s Blog
     url: https://hongcyu.cn
-  - title: 任我行
+  - title: Sorryfu
     url: https://fushaolei.github.io/
   - title: 简单的人生笔记
     url: https://yoyling.com
