--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,5 @@ links:
     url: https://blog.oneneko.com
   - title: Py的Blogggg
     url: https://blog.pyliubaolin.top
+  - title: Yuyao's Blog
+    url: http://hellocode.ink/
