--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ links:
   - title: hongCYu’s Blog
     url: https://hongcyu.cn
   - title: Sorryfu
-    url: https://fushaolei.github.io/
+    url: https://fushaolei.github.io
   - title: 简单的人生笔记
     url: https://yoyling.com
   - title: oneNeko的博客
@@ -84,4 +84,8 @@ links:
   - title: Py的Blogggg
     url: https://blog.pyliubaolin.top
   - title: Yuyao's Blog
-    url: http://hellocode.ink/
+    url: http://hellocode.ink
+  - title: 木叶的博客
+    url: https://muye.ml
+
+    
