--- a/_config.yml
+++ b/_config.yml
@@ -87,5 +87,5 @@ links:
     url: http://hellocode.ink
   - title: 木叶的博客
     url: https://muye.ml
-
-    
+  - title: Stansec
+    url: https://standeblog.com/
