--- a/_config.yml
+++ b/_config.yml
@@ -89,3 +89,6 @@ links:
     url: https://muye.ml
   - title: Stansec
     url: https://standeblog.com/
+  - title: Wenn的个人博客
+    url: https://wenn.tech/
+
