--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 
 # 域名配置
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
-domainUrl: 'http://blog.tmaize.net'
+domainUrl: 'https://blog.tmaize.net'
 baseurl: ''
 
 # 吐个槽地址，会在chat页面中重定向到该地址
