--- a/_config.yml
+++ b/_config.yml
@@ -74,14 +74,14 @@ links:
     url: https://yoyling.com
   - title: oneNeko的博客
     url: https://blog.oneneko.com
-  - title: Py的Blogggg
-    url: https://blog.pyliubaolin.top
+  - title: Py's Whisper
+    url: https://whisper.pyliubaolin.top
   - title: Yuyao's Blog
     url: http://hellocode.ink
   - title: 木叶的博客
     url: https://muye.ml
   - title: Stansec
-    url: https://standeblog.com/
+    url: https://standeblog.com
   - title: Wenn的个人博客
-    url: https://wenn.tech/
+    url: https://wenn.tech
 
