feat: 菜单支持配置新窗口打开

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ baseurl: ''
 tucaoUrl: https://support.qq.com/product/86335
 
 # 菜单
+# 必填字段 title: '文本' url: '链接'
+# 可选字段 target: '_blank' 新页面打开 
 menu:
   - title: 首页
     url: /
