--- a/_config.yml
+++ b/_config.yml
@@ -86,4 +86,6 @@ links:
     url: https://standeblog.com
   - title: Wenn的个人博客
     url: https://wenn.tech
+  - title: Congbo's Blog
+    url: https://congbo.site
 
