--- a/_config.yml
+++ b/_config.yml
@@ -88,4 +88,6 @@ links:
     url: https://wenn.tech
   - title: Congbo's Blog
     url: https://congbo.site
+  - title: 咕咚同学
+    url: https://gudong.site
 
