--- a/_config.yml
+++ b/_config.yml
@@ -90,4 +90,6 @@ links:
     url: https://congbo.site
   - title: 咕咚同学
     url: https://gudong.site
+  - title: Chemcat Blog
+    url: https://chemcat.gitee.io
 
