--- a/_config.yml
+++ b/_config.yml
@@ -92,4 +92,7 @@ links:
     url: https://gudong.site
   - title: Chemcat Blog
     url: https://chemcat.gitee.io
+  - title: semyin's blog
+    url: https://semyin.com
+    
 
