--- a/_config.yml
+++ b/_config.yml
@@ -94,5 +94,5 @@ links:
     url: https://chemcat.gitee.io
   - title: semyin's blog
     url: https://semyin.com
-    
-
+  - title: 卡拉云低代码工具
+    url: https://kalacloud.com
