--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,5 @@ links:
     url: https://gudong.site
   - title: Chemcat Blog
     url: https://chemcat.gitee.io
-  - title: semyin's blog
-    url: https://semyin.com
-  - title: 卡拉云低代码工具
-    url: https://kalacloud.com
+  - title: 大葱博客
+    url: https://blog.zzzdc.com/
