--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ links:
     url: https://fushaolei.github.io
   - title: 简单的人生笔记
     url: https://yoyling.com
-  - title: oneNeko的博客
-    url: https://blog.oneneko.com
+  - title: 郭大侠的博客
+    url: https://www.guozhenyi.com
   - title: Py's Whisper
     url: https://whisper.pyliubaolin.top
   - title: Yuyao's Blog
